need to tweak error handling to show cause and work from threads