@@ -96,8 +96,7 @@
 				<version>3.8.1</version>
 				<configuration>
 					<argLine>
-						--add-exports
-						javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+						--add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
 					</argLine>
 				</configuration>
 			</plugin>
@@ -153,6 +152,19 @@
           </execution>
         </executions>
       </plugin>
+      
+      <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.2.5</version>
+            <configuration>>
+            
+          <includes>
+            <include>*Test.java</include>
+          </includes>
+          <argLine>--add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argLine>            
+        </configuration>
+        </plugin>
       </plugins>
 	</build>
 
